--- a/src/app/components/sales/orders/orders.component.html
+++ b/src/app/components/sales/orders/orders.component.html
@@ -1,28 +1,36 @@
 <!-- Container-fluid starts-->
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="card">
-                <div class="card-header">
-                    <h5>Manage Order</h5>
-                </div>
-                <div class="card-body">
-                    <div class="custom-datatable">
-                        <input type='text' class="filter-ngx form-control" placeholder='Search...'
-                            (keyup)='updateFilter($event)' />
-                        <ngx-datatable class="bootstrap" [rows]="order" [columnMode]="'force'" [headerHeight]="50"
-                            [footerHeight]="50" [rowHeight]="'auto'" [limit]="5">
-                            <ngx-datatable-column prop="order id"></ngx-datatable-column>
-                            <ngx-datatable-column name="Product"></ngx-datatable-column>
-                            <ngx-datatable-column prop="payment status"></ngx-datatable-column>
-                            <ngx-datatable-column prop="paymeny method"></ngx-datatable-column>
-                            <ngx-datatable-column prop="order status"></ngx-datatable-column>
-                            <ngx-datatable-column name="Date"></ngx-datatable-column>
-                            <ngx-datatable-column name="Total"></ngx-datatable-column>
-                        </ngx-datatable>
-                    </div>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="card">
+        <div class="card-header">
+          <h5>Gestionar el pedido</h5>
         </div>
+
+        <table mdbTable striped="true">
+          <thead>
+            <tr>
+              <th>Fecha</th>
+              <th>Estado</th>
+              <th>Monto</th>
+              <th>Proceso</th>
+              <th>Ver</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr mdbTableCol *ngFor="let ord of order">
+              <td>{{ ord.orderDate }}</td>
+              <td>{{ ord.isActive }}</td>
+              <td>{{ ord.totalAmount }}</td>
+              <td>{{ ord.status }}</td>
+              <td>
+                <button type="button" class="btn btn-primary">Ver</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-    <!-- Container-fluid Ends-->
+  </div>
+  <!-- Container-fluid Ends-->
+</div>
