--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,8 +4,8 @@
 </div>
 <div class="sidebar custom-scrollbar">
   <div class="sidebar-user text-center">
-    <div><img class="img-60 rounded-circle" src="assets/images/dashboard/man.png" alt="#">
-    </div>
+    <!-- <div><img class="img-60 rounded-circle" src="assets/images/dashboard/man.png" alt="#">
+    </div> -->
     <h6 class="mt-3 f-14">Cofresca</h6>
     <p>Administrador.</p>
   </div>
