--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -1,38 +1,62 @@
-<!-- Container-fluid starts-->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="card">
-        <div class="card-header">
-          <h5>Gestionar el pedido</h5>
-        </div>
+<!--
+    orders: Orders;
+  customer: Customer;
+  employee: Employee;
+  itbis: number;
+  subTotal: number;
+  total: number;
+  createdDate: Date;
+ -->
 
-        <table mdbTable striped="true">
-          <thead>
-            <tr>
-              <th>Id</th>
-              <th>Fecha Creacion</th>
-              <th>Monto</th>
-              <th>Ver</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr mdbTableCol *ngFor="let invoice of invoices">
-              <td>{{ invoice.id }}</td>
-              <td>{{ dateForm(invoice.orderDate) }}</td>
-              <td>{{ invoice.total }}</td>
-              <!-- <td>{{ ord.totalAmount }}</td> -->
-              <!-- <td>{{ ord.status }}</td> -->
-              <td>
-                <button type="button" class="btn btn-primary">Ver</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+<div class="container-fluid card ">
+  <section class="overflow-auto ">
+    <article
+      class="p-0 m-0 row d-flex flex-nowrap flex-row py-3 my-4 item-card full-width"
+      *ngFor="let item of invoices"
+    >
+      <div class="pill col mr-2">
+        <span
+          [class]="
+            'pill-container d-flex justify-content-center align-items-center gray-text ' +
+            (item.orders.isActive ? 'invoice-approved-pill' : 'invoice-rejected-pill')
+          "
+        >
+          {{ "activo" }}
+        </span>
       </div>
-    </div>
-  </div>
-  <!-- Container-fluid Ends-->
+
+      <div class="p-0 m-0 col-3">
+        <label class="col-12 mb-0 pl-0 item-label font-weight-600">Fecha</label>
+        <span class="col-12 pl-0 font-weight-600 item-value font-weight-500">{{
+          dateForm(item.orders.orderDate)
+        }}</span>
+      </div>
+      <div class="p-0 m-0 col">
+        <label class="col-12 mb-0 pl-0 item-label font-weight-600">Monto</label>
+        <span class="col-12 pl-0 font-weight-600 item-value font-weight-500">{{
+          item.subTotal
+        }}</span>
+      </div>
+
+      <div class="p-0 m-0 col">
+        <label class="col-12 mb-0 pl-0 item-label font-weight-600"
+          >Proceso</label
+        >
+        <span class="col-12 pl-0 font-weight-600 item-value font-weight-500">{{
+          item.orders.status
+        }}</span>
+      </div>
+
+      <div class="p-0 m-0 col">
+        <button
+          class="btn btn-light d-flex justify-content-center align-items-center flex-row"
+          (click)="onSumit(item)"
+        >
+          <i class="fa fa-eye u-smallSize"></i>
+          <label class="m-0 ml-3 u-smallerSize"> Ver</label>
+        </button>
+      </div>
+    </article>
+  </section>
 </div>
 
-<!-- Container-fluid Ends-->
