--- a/src/app/components/users/list-user/list-user.component.scss
+++ b/src/app/components/users/list-user/list-user.component.scss
@@ -1,79 +1,105 @@
-.block {
-  width: 40%;
-  margin-left: 15%;
-  border: 2px solid #cccccc;
-  border-radius: .5px;
-  background-color: #b4cad2;
-  padding-left: 1rem;
+.container-fluid{
+  background-color: #fff;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+}
+.pagination-text {
+  font-weight: 520 !important;
 }
 
-.user {
-  padding: 1rem 1rem;
-  //border: 1px solid #ccc ;
-  margin-bottom: 2rem;
-  width: 40%;
-  border-style: inset;
+.divider {
+  height: 1px;
+  width: 100%;
+  border-top: 1.2px solid #e5e5e5 !important;
 }
 
-p{
-  margin-left: 8%;
-  color: red;
-  text-transform: uppercase;
-  font-weight: bold;
+.h-2 {
+  height: 2px;
+  left: -3px;
+  width: 99%;
 }
 
-h2 {
-  color: #336699;
-  text-decoration: underline;
-  margin-left: 20%;
+.item-label {
+  color: rgb(144, 155, 171) !important;
 }
 
-.privateData{
-  font-style: italic;
-  color: #ff590e;
+.item-value {
+  color: rgb(24, 38, 63) !important;
 }
 
+.item-number {
+  color: rgb(23, 37, 63) !important;
+  font-weight: 700;
+  margin: 0.5rem;
+}
 
-.allUsers {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
+.number-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.Users li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
+
+.full-width {
+  width: 100%;
 }
-.Users li:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
+
+.three-dot-btn {
+  min-width: 50px;
 }
-.Users li.selected {
-  background-color: #CFD8DC;
-  color: white;
+
+.pill {
+
+  .pill-container {
+    padding: 0.55em ;
+    border-radius: 24px;
+    min-width: 105px !important;
+    font-weight: 600;
+
+    &.invoice-approved-pill {
+      background-color: #f0fbf0 !important;
+      color: #54da5d !important;
+    }
+
+    &.invoice-rejected-pill {
+      background-color: #fff4f4 !important;
+      color: #f16a6a !important;
+    }
+
+    &.invoice-invoice-pill {
+      background-color: #ecf4f9 !important;
+      color: #4499cb !important;
+    }
+
+  }
 }
-.Users li.selected:hover {
-  background-color: #BBD8DC;
-  color: white;
+
+@media (min-width: 1400px) {
+  .col-xxl-1 {
+    width: 14% !important;
+    max-width: 14% !important;
+    flex: 0 0 14% !important;
+  }
+
+  .col-xxl-2 {
+    width: 16.66% !important;
+    max-width: 16.66% !important;
+    flex: 0 0 16.66% !important;
+  }
 }
-.Users .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color:#405061;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
+
+.see-btn {
+  height: 37px;
+  width: 85px;
+  background-color: rgb(239, 240, 240);
+  color: rgb(131, 138, 151);
+
+  &:hover
+  {
+    background-color: #F4F5F5;
+  }
+}
+
+.arrow-size {
+  font-size: 1.4rem;
 }
