--- a/src/app/components/products/physical/excelsheet/excelsheet.component.html
+++ b/src/app/components/products/physical/excelsheet/excelsheet.component.html
@@ -6,7 +6,23 @@
   <tbody>
     <tr *ngFor="let row of data">
       <td *ngFor="let cell of row">
-        {{ cell }}
+        {{ count }}
+
+        <!-- {{ cell }} -->
+        <!-- <div class="container">
+          <h2>Indicado de cargar de la data</h2>
+          <div class="progress">
+            <div
+              class="progress-bar"
+              role="progressbar"
+              aria-valuenow="50"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              style="width: 50%"
+            >
+            </div>
+          </div>
+        </div> -->
       </td>
     </tr>
   </tbody>
